fix: Pornhub pages overflow-auto

--- a/src/pages/pornhub/index.scss
+++ b/src/pages/pornhub/index.scss
@@ -1,7 +1,6 @@
 .ph {
   &-page {
-    @apply bg-black w-full;
-    height: 100%;
+    @apply bg-black w-full h-full overflow-auto;
     min-width: 800px;
     color: #ff9900;
   }
